@@ -1,8 +1,6 @@
 mobac.mapsources.mappacks.region_europe_dach.ICAOMapsGermany
 mobac.mapsources.mappacks.region_europe_dach.Bergfex
 mobac.mapsources.mappacks.region_europe_dach.HubermediaBavaria
-mobac.mapsources.mappacks.region_europe_dach.MapplusCh
-mobac.mapsources.mappacks.region_europe_dach.MapplusChGelaende
 mobac.mapsources.mappacks.region_europe_dach.OutdooractiveAustria
 mobac.mapsources.mappacks.region_europe_dach.OutdooractiveGermany
 mobac.mapsources.mappacks.region_europe_dach.OutdooractiveSouthTyrol
